--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   permission_handler: ^11.0.1
   location: ^5.0.3
   geolocator: ^10.1.0
+  image_picker: ^1.0.5
 
 dev_dependencies:
   flutter_test:
