--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   location: ^5.0.3
   geolocator: ^10.1.0
   image_picker: ^1.0.5
-  intl: ^0.19.0
+  intl:
 
 dev_dependencies:
   flutter_test:
