--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   geolocator: ^10.1.0
   image_picker: ^1.0.5
   intl:
+  firebase_core: ^2.24.2
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
