--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   intl:
   firebase_core:
   firebase_storage: ^11.6.0
-  cached_network_image: ^3.3.1
+  cached_network_image:
 
 dev_dependencies:
   flutter_test:
