--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   firebase_storage: ^11.6.0
   cached_network_image:
   pin_code_fields: ^7.3.0
+  pdf:
+  printing: ^5.4.2
+  flutter_pdfview: ^1.3.1
 
 dev_dependencies:
   flutter_test:
