--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   pdf:
   printing: ^5.4.2
   flutter_pdfview: ^1.3.1
+  keyboard_actions: ^4.2.0
 
 dev_dependencies:
   flutter_test:
